// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSurface > component unit tests > default component with no configuration > renders correctly 1`] = `
<div
  class="cdr-surface"
>
  <!-- @slot Where all default content should be placed. -->
  
  
</div>
`;

exports[`CdrSurface > component unit tests > when "tag" is set to "a" > renders correctly 1`] = `
<a
  class="cdr-surface"
>
  <!-- @slot Where all default content should be placed. -->
  
  
</a>
`;

exports[`CdrSurface > snapshot test > renders correctly 1`] = `
<div
  class="cdr-surface"
>
  <!-- @slot Where all default content should be placed. -->
  
  
</div>
`;
